--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,14 +1,12 @@
 name: Docker
 
 on:
-  push:
-    tags:
-      - "docker"
+  workflow_dispatch:
 
 env:
   APP_NAME: stat_server
   APP_VERSION: "1.0"
-  DOCKERHUB_REPO: idoge/stat_server
+  DOCKERHUB_REPO: seesonchan/stat_server
   GIT_TAG: ""
 
 jobs:
